tests/miniJava/neg/002900_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = static int [ 0 ] ; } }
